@@ -13,6 +13,8 @@ Version 4.3.1  [ 28 April, 2006 ]
         Class NClosedPrimeMinSearcher:
             - Fixed memory leak (the destructor was not deallocating some
               internal arrays).
+            - Minor changes to the behaviour of mergeEdgeClasses()
+              (might return only some flags instead of all flags).
         Class NFacePairing:
             - New constructor for building the face pairing of an
               existing triangulation.
